# xmonad

./: .gitignore  default.nix  result  screenshot.hs  screenshot2.hs  shell.nix  taffybar.sh  xmonad.cabal  xmonad.hs  xmonad.hs.bak  xmonad.hs.original
src/TaffyBar/: my-taffybar.cabal  taffybar.css  taffybar.hs
src/XMonadConfig/: Conky copy.hs  Conky.hs  Hooks.hs  Keys.hs  Logging.hs  Main.hs  NitrogenWallpaper.hs  PromptUtils.hs  Scratchpads.hs  StatusBar.hs
src/nix/: default.nix  haskell-package-overrides.nix  lib-overlay.nix  shell.nix
